@@ -19,10 +19,6 @@
 #
 import os
 import sys
-import urlparse
-import urllib2
-import re
-import datetime
 
 import buggalo
 
@@ -33,18 +29,20 @@ import xbmcplugin
 BASE_URL = 'http://borsen.dk/tv/'
 FEEDS = {
     30100 : 'rss://borsen.dk/podcast/alle',
-    30108 : 'rss://borsen.dk/podcast/investor1000',
     30101 : 'rss://borsen.dk/podcast/investor',
-    30106 : 'rss://borsen.dk/podcast/karriere',
+    30102 : 'rss://borsen.dk/podcast/investor1000',
+    30103 : 'rss://borsen.dk/podcast/karriere',
     30104 : 'rss://borsen.dk/podcast/politik',
-    30103 : 'rss://borsen.dk/podcast/politik',
-    30102 : 'rss://borsen.dk/podcast/politik'
+    30105 : 'rss://borsen.dk/podcast/privatokonomi',
+    30106 : 'rss://borsen.dk/podcast/okonomi',
+    30107 : 'rss://borsen.dk/podcast/finans'
 }
 
 class BorsenTVAddon(object):
     def showCategories(self):
         for id in FEEDS.keys():
             item = xbmcgui.ListItem(ADDON.getLocalizedString(id), iconImage = ICON)
+            item.setProperty('Fanart_Image', FANART)
             xbmcplugin.addDirectoryItem(HANDLE, FEEDS[id], item, isFolder = True)
 
         xbmcplugin.endOfDirectory(HANDLE)
@@ -53,6 +51,7 @@ if __name__ == '__main__':
     ADDON = xbmcaddon.Addon()
     HANDLE = int(sys.argv[1])
     ICON = os.path.join(ADDON.getAddonInfo('path'), 'icon.png')
+    FANART = os.path.join(ADDON.getAddonInfo('path'), 'fanart.jpg')
 
     buggalo.SUBMIT_URL = 'http://tommy.winther.nu/exception/submit.php'
     try:
