@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.borsentv.dk" version="1.0.3" name="Børsen TV" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.borsentv.dk" version="1.0.4" name="Børsen TV" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
         <import addon="script.module.buggalo" version="1.0.1"/>
